--- a/getting-started-with-vim/index.html
+++ b/getting-started-with-vim/index.html
@@ -14,6 +14,8 @@
 
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
 
+    <meta name="robots" content="noindex, nofollow" />
+
     <link rel="stylesheet" href="css/reveal.min.css">
     <link rel="stylesheet" href="css/theme/default.css" id="theme">
 
