--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <title>Software tech presentation slides</title>
+  <meta name="robots" content="noindex, nofollow" />
 
   <style>
   #content {
