--- a/getting-started-with-vim/index.html
+++ b/getting-started-with-vim/index.html
@@ -76,6 +76,23 @@
           </blockquote>
         </section>
 
+        <section data-markdown>
+          <script type="text/template">
+            ## Why I have learned ViM
+
+            I actually was forced to do so in some sense. I have worked in a company where everyone was using vim and
+            it was a shame for me to open my IDE. Seeing how these guys effectively used it and being afraid to open **nano**
+            during a presentation where I might need to edit some system configuration file and get laughed at.
+
+            It was a pain in the ass, I do not remember how many times I wished going back during the first week. Now I
+            am glad I did not and there are no more thoughts about using any IDE in the future.
+
+            It is your choice whether you are willing to invest a bunch of time learning it, what can I say - from my
+            point of view, its definetely worth it!
+
+          </script>
+        </section>
+
         <section>
 
           <section>
@@ -271,26 +288,11 @@
 
               **NOTE:** do not copy someone`s configuration without understanding it, everyone has different tastes.
 
+              Follow my blog [gediminasm.org](http://gediminasm.org) RSS feed, I will create a blog post with some configuration
+              and plugins to start with soon.
             </script>
           </section>
 
-        </section>
-
-        <section data-markdown>
-          <script type="text/template">
-            ## Why I have learned ViM
-
-            I actually was forced to do so in some sense. I have worked in a company where everyone was using vim and
-            it was a shame for me to open my IDE. Seeing how these guys effectively used it and being afraid to open **nano**
-            during a presentation where I might need to edit some system configuration file and get laughed at.
-
-            It was a pain in the ass, I do not remember how many times I wished going back during the first week. Now I
-            am glad I did not and there are no more thoughts about using any IDE in the future.
-
-            It is your choice whether you are willing to invest a bunch of time learning it, what can I say - from my
-            point of view, its definetely worth it!
-
-          </script>
         </section>
 
         <section data-markdown>
