move revealjs to shared submodule

--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
   <div id="content">
     <ul>
       <li><a href="getting-started-with-vim/index.html"><strong>2013-06-27</strong> Getting started with ViM</a></li>
+      <li><a href="being-dangerous-with-git-rebase/index.html"><strong>2013-07-31</strong> Being dangerous with <strong>git rebase</strong></a></li>
     </ul>
   </div>
 </body>
