add doctrine extension presentation slides for symfonycon Warsaw 2013

--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
     <ul>
       <li><a href="getting-started-with-vim/index.html"><strong>2013-06-27</strong> Getting started with ViM</a></li>
       <li><a href="being-dangerous-with-git-rebase/index.html"><strong>2013-07-31</strong> Being dangerous with <strong>git</strong></a></li>
+      <li><a href="doctrine-extensions/index.html"><strong>2013-12-09</strong> Doctrine Behavioral Extensions</a></li>
     </ul>
   </div>
 </body>
