--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
       <li><a href="getting-started-with-vim/index.html"><strong>2013-06-27</strong> Getting started with ViM</a></li>
       <li><a href="being-dangerous-with-git-rebase/index.html"><strong>2013-07-31</strong> Being dangerous with <strong>git</strong></a></li>
       <li><a href="doctrine-extensions/index.html"><strong>2013-12-09</strong> Doctrine Behavioral Extensions</a></li>
+      <li><a href="testing-by-example/index.html"><strong>2014-01-18</strong> Testing by example</a></li>
     </ul>
   </div>
 </body>
