--- a/testing-by-example/index.html
+++ b/testing-by-example/index.html
@@ -40,7 +40,8 @@
       padding-top: 15px;
     }
     .reveal pre code.full {
-      max-height: 500px;
+      max-height: 600px;
+      max-width: 1000px;
     }
     .reveal img.no-border {
       border: 0;
@@ -144,17 +145,333 @@
           <pre><code class="php" data-noescape>&lt;?php // imaginable depositAction in controller
 
 $transfer = new Transfer
+// create form, bind request, validate
+$transfer->setStatus(Transfer::PENDING);
+// link to an user and his wallet
+// persist $transfer and redirect to egopay
+$this->get('egopay')->create($transfer);</code></pre>
 
-$form = $this->createForm(new TransferType, $transfer);
-$form->handleRequest($request);
+          <p class="fragment">When you are happy with how it should work, continue with PhpSpecs or PhpUnit tests</p>
+          <p class="fragment">Finally, implement the code, loop around and refactor till it is done.</p>
+        </section>
 
-// bind amount and currency - request to form, validate
-if ($form->isValid()) {
-    $transfer->setStatus(Transfer::PENDING);
-    // link to an user and his wallet
-    // persist $transfer and redirect to egopay
-    $this->get('egopay')->create($transfer);
+        <section>
+          <h3>Now a real use case</h3>
+
+          <p class="fragment">Given: we do not like Doctrine ORM, the complexity and limitations to database.</p>
+
+          <img src="img/invent.jpg" class="fragment" />
+
+          <p class="fragment">I want something light, mainly to map query results to an object.</p>
+        </section>
+
+        <section>
+          <h3>Lets design the behavior in README</h3>
+
+          <pre><code class="php full" data-noescape>&lt;?php
+$sql = "SELECT * FROM users WHERE u.username = ?";
+if ($data = $db->fetchAssoc($sql, ["tom"])) {
+    $user = new User;
+    $mapper->scan($data, $user);
 }</code></pre>
+        </section>
+
+        <section>
+          <h3>Something more sophisticated</h3>
+
+          <pre><code class="php full" data-noescape>&lt;?php
+$sql = &lt;&lt;&lt;SQL
+SELECT %s, %s FROM users AS u
+INNER JOIN address AS a ON u.home_address_id = a.id
+WHERE u.username = ?
+SQL;
+
+$sql = sprintf(
+    $sql,
+    $scanner->select('Model\User', 'u'),
+    $scanner->select('Model\Address', 'a')
+);
+if ($data = $db->fetchAssoc($sql, ["tom"])) {
+    $user = new User;
+    $user->homeAddress = new Address;
+
+    $scanner->scan($data, $user, 'u');
+    $scanner->scan($data, $user->homeAddress, 'a');
+}</code></pre>
+        </section>
+
+        <section>
+          <h3>Models</h3>
+
+          <p class="fragment">Our models should have some mapping</p>
+
+          <pre class="fragment"><code class="php full" data-noescape>&lt;?php
+class User
+{
+    /** @Column(type="integer") */
+    private $id;
+
+    /** @Column(type="string", name="first_name") */
+    private $firstName;
+
+    /** @Column(type="string") */
+    private $username;
+
+    private $unmapped;
+}</code></pre>
+        </section>
+
+        <section>
+          <h3>Write some specs</h3>
+
+          <p class="fragment">When we are happy with our initial behavior design.</p>
+
+          <p class="fragment">We start writting specs, lets name our pet project - <strong>Quirky</strong></p>
+
+          <p class="fragment"><strong>Note:</strong> we should concentrate on our behavior of design, not on details
+          which are just details, I will try to denote this with examples.</p>
+
+          <img src="img/describe_mapper.png" class="fragment" alt="Describe spec" />
+
+          <pre class="fragment"><code class="php">&lt;?php
+
+namespace spec\Quirky;
+
+use PhpSpec\ObjectBehavior;
+use Prophecy\Argument;
+
+class MapperSpec extends ObjectBehavior
+{
+    function it_is_initializable()
+    {
+        $this->shouldHaveType('Quirky\Mapper');
+    }
+}</code></pre>
+        </section>
+
+        <section>
+          <p>We need to be able to get selectable columns from a model object..</p>
+
+          <pre class="fragment"><code class="php full">&lt;?php // spec/Quirky/MapperSpec.php;
+
+function it_should_be_able_to_generate_selectable_columns()
+{
+    $expected = 'id, first_name, username';
+    $this->select('spec\Quirky\User')->shouldBe($expected);
+
+    $expected = 'u.id AS u_id, u.first_name AS u_first_name, u.username AS u_username';
+    $this->select('spec\Quirky\User', 'u')->shouldBe($expected);
+}</code></pre>
+        </section>
+
+        <section>
+          <p>We should be able to get column types for a model object..</p>
+
+          <pre class="fragment"><code class="php full">&lt;?php // spec/Quirky/MapperSpec.php;
+
+function it_should_be_able_to_list_types_of_columns()
+{
+    $this->types('spec\Quirky\User')->shouldBe([
+        'id' => 'integer',
+        'first_name' => 'string',
+        'username' => 'string'
+    ]);
+
+    $this->type('spec\Quirky\User', 'id')->shouldBe('integer');
+    $this->type('spec\Quirky\User', 'username')->shouldBe('string');
+}</code></pre>
+        </section>
+
+        <section>
+          <p>We should be able to read column data from model..</p>
+
+          <pre class="fragment"><code class="php full">&lt;?php // spec/Quirky/MapperSpec.php;
+
+function it_should_be_able_to_read_data_from_model()
+{
+    $user = new User;
+    $this->data($user)->shouldBe([
+        'id' => 5,
+        'first_name' => 'Tom',
+        'username' => 'tom',
+    ]);
+}</code></pre>
+        </section>
+
+        <section>
+          <p>We should be able to scan data into model object..</p>
+
+          <pre class="fragment"><code class="php full">&lt;?php // spec/Quirky/MapperSpec.php;
+
+function it_should_be_able_to_scan_data()
+{
+    $user = new User;
+    $data = [
+        'username' => 'tom',
+        'first_name' => 'Tom',
+        'id' => 4,
+    ];
+
+    $this->scan($data, $user);
+}</code></pre>
+        </section>
+
+        <section>
+          <p>And here are some kittens so you won't fall a sleep</p>
+
+          <img class="fragment" src="img/kittens.jpg" alt="Kittens" />
+        </section>
+
+        <section>
+          <p>We will mock metadata so we can concentrate on behavior</p>
+
+          <pre class="fragment"><code class="php full">&lt;?php
+
+namespace spec\Quirky;
+
+use PhpSpec\ObjectBehavior;
+use Prophecy\Argument;
+
+class MapperSpec extends ObjectBehavior
+{
+    private $userMapping = [
+        'id' => ['id', 'integer'],
+        'firstName' => ['first_name', 'string'],
+        'username' => ['username', 'string'],
+    ];
+
+    /**
+     * @param Quirky\Metadata $metadata
+     */
+    function let($metadata)
+    {
+        $metadata
+            ->mapping('spec\Quirky\User')
+            ->shouldBeCalled()
+            ->willReturn($this->userMapping);
+
+        $this->beConstructedWith($metadata);
+    }
+
+    function it_is_initializable()
+    {
+        $this->shouldHaveType('Quirky\Mapper');
+    }
+}</code></pre>
+        </section>
+
+        <section>
+          <p>Now lets update read and scan data functions, so it makes more sense..</p>
+
+          <pre class="fragment"><code class="php full">&lt;?php // spec/Quirky/MapperSpec.php;
+
+function it_should_be_able_to_read_data_from_model($metadata)
+{
+    $user = new User;
+
+    $metadata
+        ->get($user, 'id')
+        ->shouldBeCalled()
+        ->willReturn(5);
+
+    $metadata
+        ->get($user, 'firstName')
+        ->shouldBeCalled()
+        ->willReturn('Tom');
+
+    $metadata
+        ->get($user, 'username')
+        ->shouldBeCalled()
+        ->willReturn('tom');
+
+
+    $this->data($user)->shouldBe([
+        'id' => 5,
+        'first_name' => 'Tom',
+        'username' => 'tom',
+    ]);
+}</code></pre>
+        </section>
+
+        <section>
+          <pre class="fragment"><code class="php full">&lt;?php // spec/Quirky/MapperSpec.php;
+
+function it_should_be_able_to_scan_data($metadata)
+{
+    $user = new User;
+    $data = [
+        'username' => 'tom',
+        'first_name' => 'Tom',
+        'id' => 4,
+    ];
+
+    $metadata
+        ->set($user, 'id', 4)
+        ->shouldBeCalled();
+
+    $metadata
+        ->set($user, 'firstName', 'Tom')
+        ->shouldBeCalled();
+
+    $metadata
+        ->set($user, 'username', 'tom')
+        ->shouldBeCalled();
+
+    $this->scan($data, $user);
+}</code></pre>
+        </section>
+
+        <section>
+          <p>And lets add our User class in the same spec</p>
+
+          <pre class="fragment"><code class="php full">&lt;?php
+
+namespace spec\Quirky;
+
+use PhpSpec\ObjectBehavior;
+use Prophecy\Argument;
+
+class MapperSpec extends ObjectBehavior
+{
+    //...
+}
+
+class User
+{
+    public $id;
+    private $firstName;
+    protected $username;
+    public $unmapped;
+}</code></pre>
+
+        </section>
+
+        <section>
+          <p>Lets describe our Metadata, so we can use it as a mock</p>
+
+          <img src="img/describe_metadata.png" class="fragment" alt="Describe spec" />
+
+          <p class="fragment">Finally, write some code and see if we are missing something.</p>
+
+          <p class="fragment">After coding, we do specs again and cover missing parts, to satisfy our design.
+          And the last step, is annotation mapping support and such.</p>
+        </section>
+
+        <section>
+          <p>Some unrelated concerning questions in Lithuania, while compressing my video</p>
+
+          <img src="img/kaip.png" class="fragment" alt="Google search suggestions - kaip" />
+          <img src="img/kodel_jis.png" class="fragment" alt="Google search suggestions - kodel jis" />
+          <img src="img/kodel_jis_ma.png" class="fragment" alt="Google search suggestions - kodel jis ma" />
+          <img src="img/kodel_jam.png" class="fragment" alt="Google search suggestions - kodel jam" />
+          <img src="img/kodel_jai.png" class="fragment" alt="Google search suggestions - kodel jai" />
+        </section>
+
+        <section>
+          <h3>Lets try the same on PhpUnit??</h3>
+
+          <p>code and demo can be <a href="slides.gediminasm.org/testing-by-example/files/quirky.tar.gz">downloaded here</a></p>
+          <p>TODO</p>
         </section>
 
         <section>
@@ -162,6 +479,7 @@ if ($form->isValid()) {
 
           <img src="img/question_everything.jpg" height="400px" alt="Questions?" />
 
+          <p>Slides are available at: <a href="slides.gediminasm.org">slides.gediminasm.org</a></p>
           <p>Powered by: <a href="http://lab.hakim.se/reveal-js/">Revealjs</a>
         </section>
 
