file dl uri update

--- a/testing-by-example/index.html
+++ b/testing-by-example/index.html
@@ -470,7 +470,7 @@ class User
         <section>
           <h3>Lets try the same on PhpUnit??</h3>
 
-          <p>code and demo can be <a href="slides.gediminasm.org/testing-by-example/files/quirky.tar.gz">downloaded here</a></p>
+          <p>code and demo can be <a href="http://slides.gediminasm.org/testing-by-example/files/quirky.tar.gz">downloaded here</a></p>
           <p>TODO</p>
         </section>
 
